--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Bank Tag Layouts
-author=geheur
-support=https://github.com/geheur/bank-tag-custom-layouts
+displayName=Mtsoltan Bank Tag Layouts
+author=mtsoltan (original by geheur)
+support=https://github.com/mtsoltan/bank-tag-custom-layouts
 description=Right click bank tag tabs to enable layout, then drag items in the tag to reposition them in whatever order you like.
 tags=bank,tag,layout
-plugins=com.banktaglayouts.BankTagLayoutsPlugin
+plugins=com.mtsoltanbanktaglayouts.BankTagLayoutsPlugin
