--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,4 +1,4 @@
-displayName=Mtsoltan Bank Tag Layouts
+displayName=mtsoltan Bank Tag Layouts
 author=mtsoltan (original by geheur)
 support=https://github.com/mtsoltan/bank-tag-custom-layouts
 description=Right click bank tag tabs to enable layout, then drag items in the tag to reposition them in whatever order you like.
